--- a/ED2O.ipynb
+++ b/ED2O.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ED2O.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPwrzG0Iz8te4yVgLxTLYtH",
+      "authorship_tag": "ABX9TyOmXmn2y5PgLgfCrar+W7JW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jcjimenezb123/MetodosNumericosPython/blob/master/ED2O.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uybyvSNwv2be"
+      },
+      "source": [
+        "#Método del disparo"
       ]
     },
     {
@@ -400,6 +409,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lMeQmhh-v-Jh"
+      },
+      "source": [
+        "#Método de diferencias finitas"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "7pQwEebOBOvN"
@@ -424,7 +442,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P5wM-_tCfqIL",
-        "outputId": "7502960a-de1e-4636-acdf-91cad17cc4e9"
+        "outputId": "352ec964-6c6c-4a7c-d173-a1726a3ab598"
       },
       "source": [
         "A=np.zeros([n-1,n-1])\n",
@@ -442,12 +460,44 @@
         "    A[r,r-1]=1\n",
         "    b[r]=-a*h**2*Ta-Tn\n",
         "\n",
+        "A"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-2.0002,  1.    ,  0.    , ...,  0.    ,  0.    ,  0.    ],\n",
+              "       [ 1.    , -2.0002,  1.    , ...,  0.    ,  0.    ,  0.    ],\n",
+              "       [ 0.    ,  1.    , -2.0002, ...,  0.    ,  0.    ,  0.    ],\n",
+              "       ...,\n",
+              "       [ 0.    ,  0.    ,  0.    , ..., -2.0002,  1.    ,  0.    ],\n",
+              "       [ 0.    ,  0.    ,  0.    , ...,  1.    , -2.0002,  1.    ],\n",
+              "       [ 0.    ,  0.    ,  0.    , ...,  0.    ,  1.    , -2.0002]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AI5P-WTvxDg2",
+        "outputId": "21f85823-204f-43b5-e10d-3890a4bd7fad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
         "T=np.linalg.solve(A,b)\n",
         "T=np.append(T0,T)\n",
         "T=np.append(T,Tn)\n",
         "T"
       ],
-      "execution_count": 100,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -482,7 +532,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 100
+          "execution_count": 103
         }
       ]
     },
