--- a/EDPParabolicas.ipynb
+++ b/EDPParabolicas.ipynb
@@ -5,11 +5,8 @@
     "colab": {
       "name": "EDPParabolicas.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "6sQ18pe-nG7m",
-        "SSU0_x_CnKwa"
-      ],
-      "authorship_tag": "ABX9TyNl0yN4pbeE0nI6+G7TT+5z",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOf9PGtxoIboH0LYFZQTbAx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -185,7 +182,7 @@
         "Tx0=100\n",
         "Tx10=50"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -195,7 +192,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pj_StLzCnRse",
-        "outputId": "56a62db6-d39f-4e7e-88c6-b082059b2534"
+        "outputId": "26c9fa4a-4ebc-4a6e-ebad-054bc6767f87"
       },
       "source": [
         "n=200\n",
@@ -206,7 +203,7 @@
         "u[1:m,0]=T0\n",
         "u"
       ],
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,76 +218,34 @@
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 74
         }
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "A=np.diag([-lamda]*(m-1),-1) + np.diag([1+2*lamda]*m) + np.diag([-lamda]*(m-1),1)\n",
+        "A"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2LnowGKZn6O_",
-        "outputId": "90e8f285-7f03-43fa-901f-6cc558cc7987"
+        "id": "vMmlfQSgzE06",
+        "outputId": "324b6653-f7b0-4068-bef5-b1d628bf5fa8"
       },
-      "source": [
-        "A=np.zeros((m,m))\n",
-        "b=np.zeros(m)\n",
-        "A"
-      ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0.]])"
+              "4"
             ]
           },
           "metadata": {},
-          "execution_count": 72
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "79VySDDZoC4x",
-        "outputId": "ee795571-7b47-4ffa-8db0-8dd6a2acadd9"
-      },
-      "source": [
-        "A[0,0:2]=np.array([1+2*lamda,-lamda]) #primer renglon\n",
-        "\n",
-        "#renglones intermedios\n",
-        "for i in range(m-2):\n",
-        "  A[i+1,i:i+3]=np.array([-lamda,1+2*lamda,-lamda])\n",
-        "\n",
-        "#ultimo renglon\n",
-        "A[i+2,i+1:i+3]=np.array([-lamda,1+2*lamda])\n",
-        "\n",
-        "A"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 1.04175 , -0.020875,  0.      ,  0.      ],\n",
-              "       [-0.020875,  1.04175 , -0.020875,  0.      ],\n",
-              "       [ 0.      , -0.020875,  1.04175 , -0.020875],\n",
-              "       [ 0.      ,  0.      , -0.020875,  1.04175 ]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 73
+          "execution_count": 58
         }
       ]
     },
@@ -301,19 +256,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Fiutc5mHpOQ9",
-        "outputId": "869cfcb9-2644-4f07-92a0-80b8d80ab58b"
+        "outputId": "6d0b0e3f-67fc-46da-d998-7eb0d14d613c"
       },
       "source": [
+        "b=np.zeros(m)\n",
         "#ciclo del tiempo\n",
-        "for j in range(n-1):\n",
-        "  b[0]=u[1,j]+lamda*u[0,j+1] #primer renglon\n",
-        "\n",
-        "  #renglones intermedios\n",
-        "  for i in range(m-2):\n",
-        "    b[i+1]=u[i+2,j]\n",
-        "\n",
-        "  #ultimo renglon\n",
-        "  b[m-1]=u[m,j]+lamda*u[m+1,j+1]\n",
+        "for j in range(n-2):\n",
+        "  b=u[1:m+1,j].copy()\n",
+        "  b[0]=b[0]+lamda*u[0,j+1]\n",
+        "  b[-1]=b[-1]+lamda*u[-1,j+1]\n",
         "\n",
         "  #solucions del sistema\n",
         "  sol=np.linalg.solve(A,b)\n",
@@ -323,7 +274,7 @@
         "\n",
         "u[:,:4]"
       ],
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +289,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 75
         }
       ]
     },
@@ -350,12 +301,12 @@
           "height": 265
         },
         "id": "xzE9rNe8qahx",
-        "outputId": "1e2414a6-b23b-4f7b-f554-d756fd07c070"
+        "outputId": "783680b8-d1e8-46ae-bc55-4a8bcc6d1582"
       },
       "source": [
         "plt.plot(np.linspace(0,L,m+2),u[:,::10]);"
       ],
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "display_data",
@@ -395,17 +346,13 @@
         "Tx0=100\n",
         "Tx10=50"
       ],
-      "execution_count": 2,
+      "execution_count": 76,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "luRGNuml28qh",
-        "outputId": "30c7ea91-e751-4ad6-df61-d7ccb10942e4"
+        "id": "luRGNuml28qh"
       },
       "source": [
         "n=40\n",
@@ -416,42 +363,8 @@
         "u[1:m,0]=T0\n",
         "u"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100.,\n",
-              "        100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100.,\n",
-              "        100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100.,\n",
-              "        100., 100., 100., 100., 100., 100., 100.],\n",
-              "       [  0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.],\n",
-              "       [  0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.],\n",
-              "       [  0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.],\n",
-              "       [  0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,\n",
-              "          0.,   0.,   0.,   0.,   0.,   0.,   0.],\n",
-              "       [ 50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,\n",
-              "         50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,\n",
-              "         50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,  50.,\n",
-              "         50.,  50.,  50.,  50.,  50.,  50.,  50.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -460,29 +373,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MuQM2VRO3Az9",
-        "outputId": "c7323c1e-053a-47c8-9caa-f8803725eeef"
+        "outputId": "9fccdb61-4ed6-419c-8f7c-f0015f0f56c2"
       },
       "source": [
         "b=np.zeros(m)\n",
         "\n",
-        "A=np.diag([-lamda]*(m-1),-1) + np.diag([2*(1-lamda)]*m) + np.diag([-lamda]*(m-1),1)\n",
+        "A=np.diag([-lamda]*(m-1),-1) + np.diag([2*(lamda+1)]*m) + np.diag([-lamda]*(m-1),1)\n",
         "\n",
         "A"
       ],
-      "execution_count": 9,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 1.95825 , -0.020875,  0.      ,  0.      ],\n",
-              "       [-0.020875,  1.95825 , -0.020875,  0.      ],\n",
-              "       [ 0.      , -0.020875,  1.95825 , -0.020875],\n",
-              "       [ 0.      ,  0.      , -0.020875,  1.95825 ]])"
+              "array([[ 2.04175 , -0.020875,  0.      ,  0.      ],\n",
+              "       [-0.020875,  2.04175 , -0.020875,  0.      ],\n",
+              "       [ 0.      , -0.020875,  2.04175 , -0.020875],\n",
+              "       [ 0.      ,  0.      , -0.020875,  2.04175 ]])"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 78
         }
       ]
     },
@@ -493,37 +406,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kgYuIwCG3ueY",
-        "outputId": "959ece68-3198-43c9-ee6b-426e65470a2f"
+        "outputId": "9d7f9257-615b-433a-9222-812a9e2594a5"
       },
       "source": [
-        "u=np.zeros((m+2,n))\n",
-        "u[0,]=Tx0\n",
-        "u[m+1,]=Tx10\n",
-        "u[1:m,0]=T0\n",
-        "b=np.zeros(m)\n",
-        "\n",
-        "A=np.diag([-lamda]*(m-1),-1) + np.diag([2*(lamda+1)]*m) + np.diag([-lamda]*(m-1),1)\n",
-        "idx=2\n",
         "#ciclo del tiempo\n",
         "for j in range(1,n):\n",
-        "  if j<=idx:\n",
-        "    print(f'\\n\\nj={j}')\n",
-        "\n",
         "  for i in range(m):\n",
         "    b[i]=lamda*u[i,j-1]+2*(lamda+1)*u[i+1,j-1]+lamda*u[i+2,j-1]\n",
-        "    if j<=idx:\n",
-        "      print(f'{lamda}*{u[i,j-1]}+2*({lamda}+1)*{u[i+1,j-1]}+{lamda}*{u[i+2,j-1]}={b[i]}')\n",
-        "\n",
-        "  if j<=idx:\n",
-        "    print(f'{b[0]}+{lamda}*{u[0,j]}')\n",
-        "    print(f'{b[-1]}+{lamda}*{u[-1,j]}')\n",
         "\n",
         "  b[0]=b[0]+lamda*u[0,j]\n",
         "  b[-1]=b[-1]+lamda*u[-1,j]\n",
         "\n",
-        "  if j<=idx:\n",
-        "    print(b)\n",
-        "    \n",
         "  #solucions del sistema\n",
         "  sol=np.linalg.solve(A,b)\n",
         "\n",
@@ -532,34 +425,8 @@
         "\n",
         "u[:,:5].round(4)"
       ],
-      "execution_count": 25,
+      "execution_count": 79,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "\n",
-            "j=1\n",
-            "0.020875*100.0+2*(0.020875+1)*0.0+0.020875*0.0=2.0875\n",
-            "0.020875*0.0+2*(0.020875+1)*0.0+0.020875*0.0=0.0\n",
-            "0.020875*0.0+2*(0.020875+1)*0.0+0.020875*0.0=0.0\n",
-            "0.020875*0.0+2*(0.020875+1)*0.0+0.020875*50.0=1.04375\n",
-            "2.0875+0.020875*100.0\n",
-            "1.04375+0.020875*50.0\n",
-            "[4.175  0.     0.     2.0875]\n",
-            "\n",
-            "\n",
-            "j=2\n",
-            "0.020875*100.0+2*(0.020875+1)*2.045029382945638+0.020875*0.021017610982310284=6.263377485258512\n",
-            "0.020875*2.045029382945638+2*(0.020875+1)*0.021017610982310284+0.020875*0.010669166665476905=0.08582541444626404\n",
-            "0.020875*0.021017610982310284+2*(0.020875+1)*0.010669166665476905+0.020875*1.0225163310170893=0.043567542078474936\n",
-            "0.020875*0.010669166665476905+2*(0.020875+1)*1.0225163310170893+0.020875*50.0=3.1316954377082835\n",
-            "6.263377485258512+0.020875*100.0\n",
-            "3.1316954377082835+0.020875*50.0\n",
-            "[8.35087749 0.08582541 0.04356754 4.17544544]\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -573,7 +440,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 79
         }
       ]
     },
@@ -585,12 +452,12 @@
           "height": 265
         },
         "id": "vl8N0fs_fG1I",
-        "outputId": "d0fb75ee-44b9-47c1-826a-99f281588ce2"
+        "outputId": "06ccc541-a221-4a5b-cd1f-9f719b67da9e"
       },
       "source": [
         "plt.plot(np.linspace(0,L,m+2),u);"
       ],
-      "execution_count": 27,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "display_data",
