--- a/ENL_Ejemplos.ipynb
+++ b/ENL_Ejemplos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_Ejemplos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPA1hOH1aAa2yTu9UZG0nco",
+      "authorship_tag": "ABX9TyNNnVqmWFhlqHXT7myavK6Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,9 +114,9 @@
         "$$\n",
         "\n",
         "Donde $T$ representa la temperatura (C) y $P_i$\n",
-        "denota la presión de vapor saturado (mmHg). Los coeficiente de Antoine de cada componente se muestran en la siguiente tabla\n",
+        "denota la presión de vapor saturado (mmHg). Los coeficientes de Antoine de cada componente se muestran en la siguiente tabla\n",
         "\n",
-        "Componente |$A_i$| $B_i$| Ci\n",
+        "Componente |$A_i$| $B_i$| $C_i$\n",
         "---|---|---|---\n",
         "1| 6.70565|-1,211.033| 220.790\n",
         "2| 6.95464|-1,344.800| 219.482\n",
@@ -127,7 +127,13 @@
         "Condición|$x_1$| $x_2$ |$x_3$\n",
         "---|---|---|---|\n",
         "1| 0.26 |0.38| 0.36\n",
-        "2| 0.36 |0.19| 0.45\n"
+        "2| 0.36 |0.19| 0.45\n",
+        "\n",
+        "De acuerdo a la ley de Raoult\n",
+        "\n",
+        "$$\n",
+        "P=\\sum_{i=1}^nx_iP_i\n",
+        "$$\n"
       ],
       "metadata": {
         "id": "sHiYxxVNUp80"
