--- a/ENL_Ejemplos.ipynb
+++ b/ENL_Ejemplos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_Ejemplos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNNnVqmWFhlqHXT7myavK6Q",
+      "authorship_tag": "ABX9TyMkExM49cTvggQhh+KTP7y2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -163,8 +163,7 @@
         "\n",
         "donde g = 9.81$m/s^2$, $A_c$ = área de la sección transversal ($m^2$), y\n",
         "$B$ = ancho del canal en la superficie (m). Para este caso, el ancho\n",
-        "y el área de la sección transversal se relacionan con la profundidad\n",
-        "y por medio de\n",
+        "y el área de la sección transversal se relacionan con la profundidad $y$ por medio de\n",
         "\n",
         "\n",
         "$B = 3 + y$ y $A_c= 3y +\\frac{y^2}{2}$\n",
