--- a/ENL_Ejemplos.ipynb
+++ b/ENL_Ejemplos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_Ejemplos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMkExM49cTvggQhh+KTP7y2",
+      "authorship_tag": "ABX9TyPO5Fv4VYKt6PgfNcLyVJg2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,7 +154,7 @@
       "cell_type": "markdown",
       "source": [
         "Por un canal trapezoidal fluye agua a una tasa de Q = 20\n",
-        "$m^3/s$. La profundidad crítica y para dicho canal satisface la\n",
+        "$m^3/s$. La profundidad crítica $y$ para dicho canal satisface la\n",
         "ecuación\n",
         "\n",
         "$$\n",
