--- a/ENL_Ejemplos.ipynb
+++ b/ENL_Ejemplos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_Ejemplos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPO5Fv4VYKt6PgfNcLyVJg2",
+      "authorship_tag": "ABX9TyN7/Db6uPrL0sbkrDi84VHD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "Lb7QylNbEgz8"
       },
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "ouZvrb2QHD6u"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,6 +229,35 @@
       ],
       "metadata": {
         "id": "Ij5eMEDBfR6H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La siguiente ecuación permite calcular la concentración de\n",
+        "un químico en un reactor donde se tiene una mezcla completa:\n",
+        "\n",
+        "$$\n",
+        "c = c_{ent}(1 – e^{–0.04t}) + c_{0}e^{–0.04t}\n",
+        "$$\n",
+        "\n",
+        "Si la concentración inicial es $c_0 = 5$ y la concentración de entrada\n",
+        "es $c_{ent} = 12$, calcule el tiempo requerido para que $c$ sea el 85%\n",
+        "de $c_{ent}$."
+      ],
+      "metadata": {
+        "id": "rUNa66tzfFlO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ye6Y7_gpfksz"
       },
       "execution_count": null,
       "outputs": []
