--- a/ENL_Ejemplos.ipynb
+++ b/ENL_Ejemplos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_Ejemplos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7/Db6uPrL0sbkrDi84VHD",
+      "authorship_tag": "ABX9TyO99nnlX0tQLx+ocMgqpF1e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -258,6 +258,45 @@
       ],
       "metadata": {
         "id": "ye6Y7_gpfksz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Una reacción química reversible\n",
+        "\n",
+        "$$2A + B \\leftrightarrow C$$\n",
+        "\n",
+        "se caracteriza por la relación de equilibrio\n",
+        "$$\n",
+        "K=\\frac{C_c}{C_a^2C_b}\n",
+        "$$\n",
+        "\n",
+        "donde la nomenclatura $C_n$ representa la concentración del componente\n",
+        "N. Suponga que se define una variable $x$ que representa\n",
+        "el número de moles de $C$ producido. La conservación de la masa\n",
+        "se utiliza para reformular la relación de equilibrio como\n",
+        "\n",
+        "$$\n",
+        "K=\\frac{C_{c0}+x}{(C_{a0}-2x)^2(C_{b0}-x)}\n",
+        "$$\n",
+        "\n",
+        "donde el subíndice 0 indica la concentración inicial de cada componente.\n",
+        "Si $K = 0.016$, $C_{a0} = 42$, $C_{b0} = 28$ y $C_{c0} = 4$, calcule $x$."
+      ],
+      "metadata": {
+        "id": "Eq2oMIYIgSgH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "RIZDI3dEhtNO"
       },
       "execution_count": null,
       "outputs": []
