--- a/ENL_Ejemplos.ipynb
+++ b/ENL_Ejemplos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_Ejemplos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO99nnlX0tQLx+ocMgqpF1e",
+      "authorship_tag": "ABX9TyNM7cHByKI2pXHQcjPzs7aQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -297,6 +297,86 @@
       ],
       "metadata": {
         "id": "RIZDI3dEhtNO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El volumen V de un líquido contenido en un tanque horizontal\n",
+        "cilíndrico de radio r y longitud L está relacionado con la\n",
+        "profundidad del líquido h por\n",
+        "\n",
+        "$$\n",
+        "V=\\left[ r^2 cos^{-1}\\left( \\frac{r-h}{r}\\right)-(r-h\\sqrt{2rh-h^2}\\right]L\n",
+        "$$\n",
+        "\n",
+        "Determine h para r = 2 m, L = 5 m y V = 8.5 $m^3$."
+      ],
+      "metadata": {
+        "id": "Ldiin2NdeVXE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "EqwZEfEWgiEi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "En una sección de tubo, la caída de presión se calcula así:\n",
+        "\n",
+        "$$\n",
+        "\\Delta p=f\\frac{L\\rho V^2}{2D}\n",
+        "$$\n",
+        "\n",
+        "donde Δp = caída de presión (Pa), f = factor de fricción, L =\n",
+        "longitud del tubo (m), $\\rho$ = densidad ($kg/m^3$), V = velocidad (m/s),\n",
+        "y D = diámetro (m). Para el flujo turbulento, la ecuación de\n",
+        "Colebrook proporciona un medio para calcular el factor de fricción,\n",
+        "\n",
+        "$$\n",
+        "\\frac{1}{\\sqrt{f}}=-2.0Log\\left( \\frac{ϵ}{3.7D}+\\frac{2.51}{Re\\sqrt{f}}\\right)\n",
+        "$$\n",
+        "\n",
+        "donde ϵ = rugosidad (m), y Re = número de Reynolds,\n",
+        "\n",
+        "$$\n",
+        "Re=\\frac{ρVD}{μ}\n",
+        "$$\n",
+        "\n",
+        "donde μ = viscosidad dinámica (N · s/$m^2$).\n",
+        "\n",
+        "a) Determine Δp para un tramo horizontal de tubo liso de\n",
+        "0.2 m de longitud, dadas ρ = 1.23 kg/$m^3$, μ = 1.79 × 10$^{–5}$\n",
+        "N · s/m2, D = 0.005 m, V = 40 m/s, y ϵ = 0.0015 mm. Utilice\n",
+        "un método numérico para determinar el factor de fricción.\n",
+        "Obsérvese que los tubos lisos tienen Re < 105, un valor\n",
+        "inicial apropiado se obtiene con el uso de la fórmula de\n",
+        "Blasius, f = 0.316/Re0.25.\n",
+        "\n",
+        "b) Repita el cálculo pero para un tubo de acero comercial más\n",
+        "rugoso (ϵ = 0.045 mm)."
+      ],
+      "metadata": {
+        "id": "Gr1nwt2Egise"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "HzX0VogcigjQ"
       },
       "execution_count": null,
       "outputs": []
