--- a/ENL_Ejemplos.ipynb
+++ b/ENL_Ejemplos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ENL_Ejemplos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNM7cHByKI2pXHQcjPzs7aQ",
+      "authorship_tag": "ABX9TyOlpwtuKbbQ393RNtRMKTzG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,7 +309,7 @@
         "profundidad del líquido h por\n",
         "\n",
         "$$\n",
-        "V=\\left[ r^2 cos^{-1}\\left( \\frac{r-h}{r}\\right)-(r-h\\sqrt{2rh-h^2}\\right]L\n",
+        "V=\\left[ r^2 cos^{-1}\\left( \\frac{r-h}{r}\\right)-(r-h)\\sqrt{2rh-h^2}\\right]L\n",
         "$$\n",
         "\n",
         "Determine h para r = 2 m, L = 5 m y V = 8.5 $m^3$."
@@ -377,6 +377,38 @@
       ],
       "metadata": {
         "id": "HzX0VogcigjQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La concentración de bacterias contaminantes c en un lago\n",
+        "disminuye de acuerdo con la ecuación\n",
+        "\n",
+        "$$\n",
+        "c = 75e^{–1.5t} + 20e^{–0.075t}\n",
+        "$$\n",
+        "\n",
+        "Determine el tiempo que se requiere para que la concentración\n",
+        "de bacterias se reduzca a 15 con el uso de \n",
+        "\n",
+        "a) el método gráfico, y\n",
+        "\n",
+        "b) el método de Newton-Raphson"
+      ],
+      "metadata": {
+        "id": "VTip5E91k9qD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "bRrxESKhlJjk"
       },
       "execution_count": null,
       "outputs": []
