--- a/EcuacionesNoLineales.ipynb
+++ b/EcuacionesNoLineales.ipynb
@@ -6,7 +6,7 @@
       "name": "EcuacionesNoLineales.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMaYdyhp40LsRE2EiUEACSE",
+      "authorship_tag": "ABX9TyN6u+iNi5EDgXqJScue+b5b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "import plotly.express as px\n",
         "import plotly.graph_objs as go"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1120,7 +1120,7 @@
         "P =10\n",
         "g=lambda v:  # <------ Escriba la definicion para g(v)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1154,7 +1154,7 @@
         "fig=go.Figure(data=data,layout=layout)\n",
         "fig.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1333,7 +1333,7 @@
       "source": [
         "from scipy.optimize import anderson,broyden1,broyden2,diagbroyden,newton_krylov"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1344,7 +1344,7 @@
       "source": [
         "f=lambda x:x**2-2"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1360,7 +1360,7 @@
         "r=anderson(f,1)\n",
         "print(r)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1384,7 +1384,7 @@
         "r=broyden1(f,1)\n",
         "print(r)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1408,7 +1408,7 @@
         "r=broyden2(f,1)\n",
         "print(r)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1432,7 +1432,7 @@
         "r=diagbroyden(f,1)\n",
         "print(r)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1456,7 +1456,7 @@
         "r=newton_krylov(f,1)\n",
         "print(r)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1484,7 +1484,7 @@
       "source": [
         "f=lambda x:x**2+4"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1500,7 +1500,7 @@
         "r=anderson(f,1j)\n",
         "print(r)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1524,7 +1524,7 @@
         "r=broyden1(f,1j)\n",
         "print(r)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1548,7 +1548,7 @@
         "r=broyden2(f,1j)\n",
         "print(r)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1576,7 +1576,7 @@
         "r=newton(f,1j,df)\n",
         "print(r)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1586,6 +1586,63 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Raices de polinomios"
+      ],
+      "metadata": {
+        "id": "V46Ttfqk2N1y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$p(x)=x^2-x-1$"
+      ],
+      "metadata": {
+        "id": "ldBXiLei2SHl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "coef=[1,-1,-1]\n",
+        "np.roots(coef)"
+      ],
+      "metadata": {
+        "id": "ennYo8jH2Rav",
+        "outputId": "6f700b9b-74e4-420d-b43a-8f212f04657c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.61803399, -0.61803399])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "_wrU6RoB2hIa"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
