--- a/sel_ejemplos.ipynb
+++ b/sel_ejemplos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "sel_ejemplos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPLb635eGo2XKSEV/NAaEJz",
+      "authorship_tag": "ABX9TyPf2Gsezspp40dc9cbb+dnA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "S5CHMeNMBBFo"
       },
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "iwkU0CJcBtTb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "id": "VmCRrnuCCNKr",
         "outputId": "ceaf3eca-f894-4670-f0c1-9dcb453f1402"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,6 +138,23 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vuelva a calcular las concentraciones para los cinco reactores\n",
+        "que se muestran en la figura anterior, si los flujos cambian\n",
+        "como sigue:\n",
+        "\n",
+        "$Q_{01} = 5 \\quad Q_{31} = 3 \\quad Q_{25} = 2 \\quad Q_{23} = 2$\n",
+        "\n",
+        "$Q_{15} = 4 \\quad Q_{55} = 3 \\quad Q_{54} = 3 \\quad Q_{34} = 7$\n",
+        "\n",
+        "$Q_{12} = 4 \\quad Q_{03} = 8 \\quad Q_{24} = 0 \\quad Q_{44} = 10$"
+      ],
+      "metadata": {
+        "id": "E-_31oRV6hLA"
+      }
     },
     {
       "cell_type": "code",
