--- a/sel_ejemplos.ipynb
+++ b/sel_ejemplos.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "sel_ejemplos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPf2Gsezspp40dc9cbb+dnA",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP7vLXceplRrvZNNL3V12oW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +41,7 @@
       "cell_type": "markdown",
       "source": [
         "En la figura anterior se muestran cinco reactores interconectados, se necesitan cinco ecuaciones\n",
-        "de balance de masa para representar el sistema. En el reactor 1, velocidad de la\n",
+        "de balance de masa (flujo x concentración)  para representar el sistema. En el reactor 1, la velocidad de la\n",
         "masa que entra es\n",
         "\n",
         "$\n",
@@ -74,21 +75,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "$$\n",
-        "6c_1-c_3=50\\\\\n",
-        "-3c_1+3c_2=0\\\\\n",
-        "-c_2+9c_3=160\\\\\n",
-        "-c_2-8c_3+11c_4-2c_5=0\\\\\n",
-        "-3c_1-c_2+4c_5=0\n",
-        "$$"
-      ],
-      "metadata": {
-        "id": "3Y1cl2BHBBjR"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -96,18 +82,13 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n"
+        "#haga los impor necesarios\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "A=np.array([[6,0,-1,0,0],\n",
-        "            [-3,3,0,0,0],\n",
-        "            [0,-1,9,0,0],\n",
-        "            [0,-1,-8,11,-2],\n",
-        "            [-3,-1,0,0,4]])\n",
-        "b=np.array([50,0,160,0,0])"
+        "#defina la matriz de coeficientes y el vector de constantes\n"
       ],
       "metadata": {
         "id": "iwkU0CJcBtTb"
@@ -118,8 +99,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x=np.linalg.solve(A,b)\n",
-        "print(x)"
+        "#resuelva el sistema\n"
       ],
       "metadata": {
         "colab": {
@@ -163,6 +143,30 @@
       ],
       "metadata": {
         "id": "2iLgB9yxCS4Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Balancear la siguiente reacción química usando el método de Gauss-Jordan\n",
+        "\n",
+        "$$\n",
+        "H_2S+Na_2Cr_2O_7+H_2SO_4→ Cr_2(SO_4)_3+NaHSO_4+S+H_2O\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "DNEONK_XuKgT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "N1pCayOru7DQ"
       },
       "execution_count": null,
       "outputs": []
